--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 portfolio/Portfolio 2024 - Manon THILLAY-ISNARD.pdf
 cv/CV_Chargée_de_Mission_Web - Manon THILLAY-ISNARD.pdf
+cv/CV_Chargée_de_Mission_Web - Manon THILLAY-ISNARD.pdf
